--- a/K53_Learners_Test/b_lightvehicle_test.html
+++ b/K53_Learners_Test/b_lightvehicle_test.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -101,7 +101,7 @@
     <h3>Question 2 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -182,7 +182,7 @@
     <h3>Question 3 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -264,7 +264,7 @@
     <h3>Question 4 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -340,7 +340,7 @@
     <h3>Question 5 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -422,7 +422,7 @@
     <h3>Question 6 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -500,7 +500,7 @@
     <h3>Question 7 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -581,7 +581,7 @@
     <h3>Question 8 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -658,7 +658,7 @@
     <h3>Question 9 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -739,7 +739,7 @@
     <h3>Question 10 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -783,7 +783,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -857,7 +857,7 @@
     <h3>Question 11 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -939,7 +939,7 @@
     <h3>Question 12 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1017,7 +1017,7 @@
     <h3>Question 13 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1099,7 +1099,7 @@
     <h3>Question 14 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1176,7 +1176,7 @@
     <h3>Question 15 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1227,7 +1227,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1323,7 +1323,7 @@
     <h3>Question 16 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -1405,7 +1405,7 @@
     <h3>Question 17 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1485,7 +1485,7 @@
     <h3>Question 18 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1563,7 +1563,7 @@
     <h3>Question 19 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1643,7 +1643,7 @@
     <h3>Question 20 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1687,7 +1687,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1762,7 +1762,7 @@
     <h3>Question 21 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1843,7 +1843,7 @@
     <h3>Question 22 of   64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1920,7 +1920,7 @@
     <h3>Question 23 of   15</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2003,7 +2003,7 @@
     <h3>Question 24 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2080,7 +2080,7 @@
     <h3>Question 25 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2162,7 +2162,7 @@
     <h3>Question 26 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2240,7 +2240,7 @@
     <h3>Question 27 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2321,7 +2321,7 @@
     <h3>Question 28 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2399,7 +2399,7 @@
     <h3>Question 29 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2480,7 +2480,7 @@
     <h3>Question 30 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2524,7 +2524,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2621,7 +2621,7 @@
     <h3>Question 31 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2702,7 +2702,7 @@
     <h3>Question 32 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2778,7 +2778,7 @@
     <h3>Question 33 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2859,7 +2859,7 @@
     <h3>Question 34 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2935,7 +2935,7 @@
     <h3>Question 35 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2985,7 +2985,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3052,7 +3052,7 @@
     <h3>Question 36 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3130,7 +3130,7 @@
     <h3>Question 37 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3213,7 +3213,7 @@
     <h3>Question 38 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3290,7 +3290,7 @@
     <h3>Question 39 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3367,7 +3367,7 @@
     <h3>Question 40 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3411,7 +3411,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3486,7 +3486,7 @@
     <h3>Question 41 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3567,7 +3567,7 @@
     <h3>Question 42 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3644,7 +3644,7 @@
     <h3>Question 43 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3725,7 +3725,7 @@
     <h3>Question 44 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3804,7 +3804,7 @@
     <h3>Question 45 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3909,7 +3909,7 @@
     <h3>Question 46 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -3996,7 +3996,7 @@
     <h3>Question 47 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4076,7 +4076,7 @@
     <h3>Question 48 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4154,7 +4154,7 @@
     <h3>Question 49 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4234,7 +4234,7 @@
     <h3>Question 50 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4278,7 +4278,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4353,7 +4353,7 @@
     <h3>Question 51 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4434,7 +4434,7 @@
     <h3>Question 52 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4511,7 +4511,7 @@
     <h3>Question 53 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4591,7 +4591,7 @@
     <h3>Question 54 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4668,7 +4668,7 @@
     <h3>Question 55 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4718,7 +4718,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4786,7 +4786,7 @@
     <h3>Question 56 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4863,7 +4863,7 @@
     <h3>Question 57 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4948,7 +4948,7 @@
     <h3>Question 58 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5034,7 +5034,7 @@
     <h3>Question 59 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5119,7 +5119,7 @@
     <h3>Question 60 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5171,7 +5171,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5245,7 +5245,7 @@
     <h3>Question 61 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5330,7 +5330,7 @@
     <h3>Question 62 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5415,7 +5415,7 @@
     <h3>Question 63 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5500,7 +5500,7 @@
     <h3>Question 64 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -6039,6 +6039,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
