--- a/K53_Book_Test/bookb_lightvehicle_test.html
+++ b/K53_Book_Test/bookb_lightvehicle_test.html
@@ -24,7 +24,7 @@
     <h3>Question 1 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -101,7 +101,7 @@
     <h3>Question 2 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -182,7 +182,7 @@
     <h3>Question 3 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -259,7 +259,7 @@
     <h3>Question 4 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -340,7 +340,7 @@
     <h3>Question 5 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -417,7 +417,7 @@
     <h3>Question 6 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -500,7 +500,7 @@
     <h3>Question 7 of 30</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -577,7 +577,7 @@
     <h3>Question 8 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -659,7 +659,7 @@
     <h3>Question 9 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -736,7 +736,7 @@
     <h3>Question 10 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -785,7 +785,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -859,7 +859,7 @@
     <h3>Question 11 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -944,7 +944,7 @@
     <h3>Question 12 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1027,7 +1027,7 @@
     <h3>Question 13 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1104,7 +1104,7 @@
     <h3>Question 14 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1186,7 +1186,7 @@
     <h3>Question 15 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1239,7 +1239,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1332,7 +1332,7 @@
     <h3>Question 16 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -1420,7 +1420,7 @@
     <h3>Question 17 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1496,7 +1496,7 @@
     <h3>Question 18 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1579,7 +1579,7 @@
     <h3>Question 19 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1655,7 +1655,7 @@
     <h3>Question 20 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1704,7 +1704,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1779,7 +1779,7 @@
     <h3>Question 21 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1856,7 +1856,7 @@
     <h3>Question 22 of   64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -1938,7 +1938,7 @@
     <h3>Question 23 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2014,7 +2014,7 @@
     <h3>Question 24 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2096,7 +2096,7 @@
     <h3>Question 25 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2178,7 +2178,7 @@
     <h3>Question 26 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2261,7 +2261,7 @@
     <h3>Question 27 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2338,7 +2338,7 @@
     <h3>Question 28 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2421,7 +2421,7 @@
     <h3>Question 29 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2498,7 +2498,7 @@
     <h3>Question 30 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2547,7 +2547,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2645,7 +2645,7 @@
     <h3>Question 31 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2722,7 +2722,7 @@
     <h3>Question 32 of 64</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2803,7 +2803,7 @@
     <h3>Question 33 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2880,7 +2880,7 @@
     <h3>Question 34 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -2961,7 +2961,7 @@
     <h3>Question 35 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3007,7 +3007,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3073,7 +3073,7 @@
     <h3>Question 36 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3158,7 +3158,7 @@
     <h3>Question 37 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3236,7 +3236,7 @@
     <h3>Question 38 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3318,7 +3318,7 @@
     <h3>Question 39 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3395,7 +3395,7 @@
     <h3>Question 40 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3444,7 +3444,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3517,7 +3517,7 @@
     <h3>Question 41 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3594,7 +3594,7 @@
     <h3>Question 42 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3677,7 +3677,7 @@
     <h3>Question 43 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3754,7 +3754,7 @@
     <h3>Question 44 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3837,7 +3837,7 @@
     <h3>Question 45 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -3938,7 +3938,7 @@
     <h3>Question 46 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 		<div class="container">
 			<div id="branding2">
 				<h1><a ><span id="time"></span></a></h1>
@@ -4030,7 +4030,7 @@
     <h3>Question 47 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4106,7 +4106,7 @@
     <h3>Question 48 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4189,7 +4189,7 @@
     <h3>Question 49 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4265,7 +4265,7 @@
     <h3>Question 50 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4314,7 +4314,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4389,7 +4389,7 @@
     <h3>Question 51 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4466,7 +4466,7 @@
     <h3>Question 52 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4548,7 +4548,7 @@
     <h3>Question 53 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4624,7 +4624,7 @@
     <h3>Question 54 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4706,7 +4706,7 @@
     <h3>Question 55 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4752,7 +4752,7 @@
     <h3>Premium Content</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4820,7 +4820,7 @@
     <h3>Question 56 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4903,7 +4903,7 @@
     <h3>Question 57 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -4988,7 +4988,7 @@
     <h3>Question 58 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5074,7 +5074,7 @@
     <h3>Question 59 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5159,7 +5159,7 @@
     <h3>Question 60 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5211,7 +5211,7 @@
     <h3>Advertisement</h3>
   </div>
   <div class="time_score">
-    <p class="time">Time remaining:</p>
+   <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5285,7 +5285,7 @@
     <h3>Question 61 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5370,7 +5370,7 @@
     <h3>Question 62 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5455,7 +5455,7 @@
     <h3>Question 63 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -5540,7 +5540,7 @@
     <h3>Question 64 of 64</h3>
   </div>
   <div class="time_score">
-    <p>Time remaining:</p>
+    <p class="niches"></p>
 
     <div class="container">
       <div id="branding">
@@ -6079,6 +6079,7 @@ document.querySelectorAll(".niches").forEach(el => {
   el.textContent = randomAdvice;
 });
 </script>
+
 
 
 
